src/objects/Application__c.object
<CustomObject><fields>
        <fullName>Customer_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Applications</relationshipLabel>
        <relationshipName>Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields><fields>
        <fullName>FileNumber__c</fullName>
        <label>File Number</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>ReceiptNumber__c</fullName>
        <label>Receipt Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>FileNumberType__c</fullName>
        <label>File Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Alien_Number</fullName>
                    <label>Alien Number</label>
                </value>
                <value>
                    <fullName>Receipt Number</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>Application</label><nameField>
        <label>Application Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Applications</pluralLabel><recordTypeTrackHistory>false</recordTypeTrackHistory><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews><recordTypes>
        <fullName>I_130</fullName>
        <active>true</active>
        <label>I-130</label>
    </recordTypes><recordTypes>
        <fullName>I_290B</fullName>
        <active>true</active>
        <label>I-290B</label>
    </recordTypes></CustomObject>